update index html file

--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="workers">Ігор Дем'яненко</h3>
-              <p class="professions" lang="en">Product Designer</p>
+              <div class="team-container">
+                <h3 class="workers">Ігор Дем'яненко</h3>
+                <p class="professions" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -148,8 +150,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="workers">Ольга Рєпіна</h3>
-              <p class="professions" lang="en">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="workers">Ольга Рєпіна</h3>
+                <p class="professions" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -159,8 +163,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="workers">Микола Тарасов</h3>
-              <p class="professions" lang="en">Marketing</p>
+              <div class="team-container">
+                <h3 class="workers">Микола Тарасов</h3>
+                <p class="professions" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -170,8 +176,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="workers">Михайло Єрмаков</h3>
-              <p class="professions" lang="en">UI Designer</p>
+              <div class="team-container">
+                <h3 class="workers">Михайло Єрмаков</h3>
+                <p class="professions" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
