--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section-portholio">
         <div class="container">
           <h1 class="visually-hidden">Список кнопок</h1>
           <ul class="button-list">
@@ -86,8 +86,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Технокряк</h3>
-              <p class="portfolio-list">Веб-сайт</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Технокряк</h3>
+                <p class="portfolio-list">Веб-сайт</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -97,8 +99,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Постер New Orlean vs Golden Star</h3>
-              <p class="portfolio-list">Дизайн</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Постер New Orlean vs Golden Star</h3>
+                <p class="portfolio-list">Дизайн</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -108,8 +112,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Ресторан Seafood</h3>
-              <p class="portfolio-list">Додаток</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Ресторан Seafood</h3>
+                <p class="portfolio-list">Додаток</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -119,8 +125,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Проєкт Prime</h3>
-              <p class="portfolio-list">Маркетинг</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Проєкт Prime</h3>
+                <p class="portfolio-list">Маркетинг</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -130,8 +138,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Проєкт Boxes</h3>
-              <p class="portfolio-list">Додаток</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Проєкт Boxes</h3>
+                <p class="portfolio-list">Додаток</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -141,8 +151,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Inspiration has no Borders</h3>
-              <p class="portfolio-list">Веб-сайт</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Inspiration has no Borders</h3>
+                <p class="portfolio-list">Веб-сайт</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -152,8 +164,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Видання Limited Edition</h3>
-              <p class="portfolio-list">Дизайн</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Видання Limited Edition</h3>
+                <p class="portfolio-list">Дизайн</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -163,8 +177,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Проєкт LAB</h3>
-              <p class="portfolio-list">Маркетинг</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Проєкт LAB</h3>
+                <p class="portfolio-list">Маркетинг</p>
+              </div>
             </li>
             <li class="list-portholio-item">
               <img
@@ -174,8 +190,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="progects">Growing Business</h3>
-              <p class="portfolio-list">Додаток</p>
+              <div class="list-porth-item-cont">
+                <h3 class="progects">Growing Business</h3>
+                <p class="portfolio-list">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
