--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main>
-      <section class="section-portholio">
+      <section class="section-portfolio">
         <div class="container">
           <h1 class="visually-hidden">Список кнопок</h1>
           <ul class="button-list">
